style(chat): fix scrollbar overlapping with long messages in chat

--- a/components/ui/Chat/Scroll/Scroll.less
+++ b/components/ui/Chat/Scroll/Scroll.less
@@ -19,6 +19,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   height: 100%;
+  padding: 0 @normal-spacing;
 
   /* Custom Scroll for Firefox */
   scrollbar-width: thin;
